<resources>
    <string name="app_name">Taboo</string>
    <string name="teama">Team A</string>
    <string name="scoreA">0</string>
    <string name="onepoint">ONE POINT</string>
    <string name="penalty">PENALTY</string>
    <string name="teamb">Team B</string>
    <string name="scoreb">0</string>
    <string name="reset">RESET SCORE</string>
    <string name="start_timer">START TIMER</string>
    <string name="rules">RULES</string>
</resources>
