<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/gradient"
    tools:context="com.example.android.taboocounter.MainActivity">


    <LinearLayout
        android:id="@+id/topview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/marginmedium"
                android:layout_marginTop="@dimen/marginmedium"
                android:fontFamily="sans-serif-medium"
                android:gravity="center_horizontal"
                android:text="@string/teama"
                android:textColor="@color/white"
                android:textSize="@dimen/teamview"

                />

            <TextView
                android:id="@+id/team_a_score"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/marginlarge"
                android:fontFamily="sans-serif-light"
                android:gravity="center_horizontal"
                android:text="@string/scoreA"
                android:textColor="@color/white"
                android:textSize="@dimen/scoreview" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/marginsmall"
                android:layout_marginLeft="@dimen/marginlarge"
                android:layout_marginRight="@dimen/marginlarge"
                android:onClick="addOnePointForTeamA"
                android:text="@string/onepoint" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/marginsmall"
                android:layout_marginLeft="@dimen/marginlarge"
                android:layout_marginRight="@dimen/marginlarge"
                android:onClick="penaltyA"
                android:text="@string/penalty" />



        </LinearLayout>

        <View
            android:layout_width="1dp"
            android:layout_height="fill_parent"
            android:layout_marginTop="@dimen/marginmedium"
            android:background="@android:color/darker_gray"

            />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/marginmedium"
                android:layout_marginTop="@dimen/marginmedium"
                android:fontFamily="sans-serif-medium"
                android:gravity="center_horizontal"
                android:text="@string/teamb"
                android:textColor="@color/white"
                android:textSize="@dimen/teamview"


                />

            <TextView
                android:id="@+id/team_b_score"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/marginlarge"
                android:fontFamily="sans-serif-light"
                android:gravity="center_horizontal"
                android:text="@string/scoreb"
                android:textColor="@color/white"
                android:textSize="@dimen/scoreview" />


            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/marginsmall"
                android:layout_marginLeft="@dimen/marginlarge"
                android:layout_marginRight="@dimen/marginlarge"
                android:onClick="addOnePointForTeamB"
                android:text="@string/onepoint" />
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/marginsmall"
                android:layout_marginLeft="@dimen/marginlarge"
                android:layout_marginRight="@dimen/marginlarge"
                android:onClick="penaltyB"
                android:text="@string/penalty" />



        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:text="timer"
            android:textSize="40sp" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:gravity="center">


        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginBottom="@dimen/marginmedium"
            android:onClick="setCountDownTimer"
            android:text="@string/start_timer" />




        <Button
            android:id="@+id/reset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginBottom="@dimen/marginmedium"
            android:onClick="reset"
            android:text="@string/reset" />

        <Button
            android:id="@+id/rules"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginBottom="@dimen/marginmedium"
            android:onClick="Toast"
            android:text="@string/rules" />

    </LinearLayout>


</LinearLayout>
